# teenypm

./: .gitignore  README.md  pm  pm.db  pyproject.toml
teenypm/: __init__.py  teenypm.py
teenypm/plugins/: github.py  local.py
